// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationList renders normally with all props 1`] = `
<div
  class="pageContent"
>
  <h2
    class="text standard h2 xl normalWeight pageTitle"
  >
    VENEPAIKKAHAKEMUKSET
  </h2>
  <div>
    <div
      class="container"
    >
      <div
        class="leftContainer"
      >
        <span>
          Tuloksien lukumäärä: 0
        </span>
      </div>
      <div
        class="filtersContainer"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="applicationStateTableTools_nameFilter"
          >
            Asiakkaan nimi
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="applicationStateTableTools_nameFilter"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Select-module_root__Ka5uO select"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="hds-select-7-toggle-button"
            id="hds-select-7-label"
          >
            Hakemuksen tila
          </label>
          <div
            class="Select-module_wrapper__1WQXs"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="hds-select-7-label hds-select-7-toggle-button"
              aria-owns="hds-select-7-menu"
              class="Select-module_button__1aIsm"
              id="hds-select-7-toggle-button"
              type="button"
            >
              <span
                class="Select-module_buttonLabel__1fqu5"
              >
                Kaikki
              </span>
              <svg
                aria-hidden="true"
                class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M0 0h24v24H0z"
                  />
                  <path
                    d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </button>
            <ul
              aria-labelledby="hds-select-7-label"
              class="Select-module_menu__1H2aU"
              id="hds-select-7-menu"
              role="listbox"
              style="max-height: 468px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="Select-module_root__Ka5uO select"
      >
        <div
          class="Select-module_wrapper__1WQXs"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="hds-select-8-label hds-select-8-toggle-button"
            aria-owns="hds-select-8-menu"
            class="Select-module_button__1aIsm"
            id="hds-select-8-toggle-button"
            type="button"
          >
            <span
              class="Select-module_buttonLabel__1fqu5"
            >
              Toiminnot
            </span>
            <svg
              aria-hidden="true"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </button>
          <ul
            aria-labelledby="hds-select-8-label"
            class="Select-module_menu__1H2aU"
            id="hds-select-8-menu"
            role="listbox"
            style="max-height: 260px;"
            tabindex="-1"
          />
        </div>
      </div>
      <button
        class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO Button-module_theme-coat__2_3U7 button_hds-button--theme-coat__12cO0"
        type="button"
      >
        <span
          class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
        >
          Vie...
        </span>
      </button>
    </div>
    <div
      class="tableWrapper"
    >
      <div
        class="table primary"
        role="table"
        style="min-width: 1125px;"
      >
        <div
          class="stickyHeaders"
        >
          <div
            class="header mainHeader"
          >
            <button
              class="filterBtn"
            >
              Kaikki
            </button>
            <button
              class="filterBtn"
            >
               Vaihtohakemukset
            </button>
            <button
              class="filterBtn active"
            >
               Uudet hakemukset
            </button>
            <button
              class="filterBtn"
            >
               Hakukoodi
            </button>
          </div>
          <div
            class="header"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 1125px;"
          >
            <div
              class="headerCell selector"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              <div
                class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                  id="checkbox"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label
                  class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                  for="checkbox"
                />
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
            >
              Nimi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              Tyyppi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px; cursor: pointer;"
              title="Toggle SortBy"
            >
              PVM
              <div
                class="sortArrowWrapper"
              >
                <svg
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <rect
                      height="24"
                      width="24"
                    />
                    <polygon
                      fill="currentColor"
                      points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              Jono
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
            >
              Kotikunta
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
            >
              Tila
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 300 0 auto; min-width: 300px; width: 300px;"
            >
              Venepaikka
            </div>
            <div
              class="headerCell expander"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              <button>
                Pienennä kaikki
              </button>
            </div>
          </div>
        </div>
        <div
          role="rowgroup"
        >
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 1125px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-MOCK-APPLICATION-0"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-MOCK-APPLICATION-0"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="#/applications/MOCK-APPLICATION-0"
                  title="Matti Meikäläinen"
                >
                  Matti Meikäläinen
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                Hakukoodi
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                16.07.2020
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                0
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                Helsinki
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 300 0 auto; min-width: 300px; width: 300px;"
              >
                <a
                  class="internalLink brand"
                  href="#/harbors/MOCK-HARBOR-0"
                  title="Testisatama G 7"
                >
                  Testisatama G 7
                </a>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 1125px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-MOCK-APPLICATION-1"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-MOCK-APPLICATION-1"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="#/applications/MOCK-APPLICATION-1"
                  title="Maija Meikäläinen"
                >
                  Maija Meikäläinen
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                Vaihto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                16.07.2020
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                0
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                Helsinki
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 300 0 auto; min-width: 300px; width: 300px;"
              >
                <a
                  class="internalLink brand"
                  href="#/harbors/MOCK-HARBOR-1"
                  title="Pier Brosnan 7"
                >
                  Pier Brosnan 7
                </a>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 1125px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-MOCK-APPLICATION-2"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-MOCK-APPLICATION-2"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="#/applications/MOCK-APPLICATION-2"
                  title="Matti Möttönen"
                >
                  Matti Möttönen
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                Hakukoodi
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                16.07.2020
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                0
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                Helsinki
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 300 0 auto; min-width: 300px; width: 300px;"
              />
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pagination"
    >
      <button
        class="prevBtn disabled"
        disabled=""
      >
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <polygon
              fill="currentColor"
              points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
            />
          </g>
        </svg>
        <span
          class="text standard span"
        >
          Edellinen
        </span>
      </button>
      <div>
        <div
          class="selectContainer"
        >
          <select
            class="select"
          />
        </div>
        / 
        <button>
          <span
            class="text standard span underlined"
          >
            0
          </span>
        </button>
      </div>
      <button
        class="nextBtn"
      >
        <span
          class="text standard span"
        >
          Seuraava
        </span>
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <polygon
              fill="currentColor"
              points="10.5 5.5 12 7 8 11 20.5 11 20.5 13 8 13 12 17 10.5 18.5 4 12"
              transform="matrix(-1 0 0 1 24.5 0)"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`ApplicationList renders normally with minimum props 1`] = `
<div
  class="pageContent"
>
  <h2
    class="text standard h2 xl normalWeight pageTitle"
  >
    VENEPAIKKAHAKEMUKSET
  </h2>
  <div>
    <div
      class="container"
    >
      <div
        class="leftContainer"
      >
        <span>
          Tuloksien lukumäärä: 0
        </span>
      </div>
      <div
        class="filtersContainer"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="applicationStateTableTools_nameFilter"
          >
            Asiakkaan nimi
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="applicationStateTableTools_nameFilter"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Select-module_root__Ka5uO select"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="hds-select-1-toggle-button"
            id="hds-select-1-label"
          >
            Hakemuksen tila
          </label>
          <div
            class="Select-module_wrapper__1WQXs"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="hds-select-1-label hds-select-1-toggle-button"
              aria-owns="hds-select-1-menu"
              class="Select-module_button__1aIsm"
              id="hds-select-1-toggle-button"
              type="button"
            >
              <span
                class="Select-module_buttonLabel__1fqu5"
              >
                Kaikki
              </span>
              <svg
                aria-hidden="true"
                class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M0 0h24v24H0z"
                  />
                  <path
                    d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </button>
            <ul
              aria-labelledby="hds-select-1-label"
              class="Select-module_menu__1H2aU"
              id="hds-select-1-menu"
              role="listbox"
              style="max-height: 468px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="Select-module_root__Ka5uO select"
      >
        <div
          class="Select-module_wrapper__1WQXs"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="hds-select-2-label hds-select-2-toggle-button"
            aria-owns="hds-select-2-menu"
            class="Select-module_button__1aIsm"
            id="hds-select-2-toggle-button"
            type="button"
          >
            <span
              class="Select-module_buttonLabel__1fqu5"
            >
              Toiminnot
            </span>
            <svg
              aria-hidden="true"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </button>
          <ul
            aria-labelledby="hds-select-2-label"
            class="Select-module_menu__1H2aU"
            id="hds-select-2-menu"
            role="listbox"
            style="max-height: 260px;"
            tabindex="-1"
          />
        </div>
      </div>
      <button
        class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO Button-module_theme-coat__2_3U7 button_hds-button--theme-coat__12cO0"
        type="button"
      >
        <span
          class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
        >
          Vie...
        </span>
      </button>
    </div>
    <div
      class="tableWrapper"
    >
      <div
        class="table primary"
        role="table"
        style="min-width: 1125px;"
      >
        <div
          class="stickyHeaders"
        >
          <div
            class="header mainHeader"
          >
            <button
              class="filterBtn"
            >
              Kaikki
            </button>
            <button
              class="filterBtn"
            >
               Vaihtohakemukset
            </button>
            <button
              class="filterBtn active"
            >
               Uudet hakemukset
            </button>
            <button
              class="filterBtn"
            >
               Hakukoodi
            </button>
          </div>
          <div
            class="header"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 1125px;"
          >
            <div
              class="headerCell selector"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              <div
                class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                  id="checkbox"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label
                  class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                  for="checkbox"
                />
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
            >
              Nimi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              Tyyppi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px; cursor: pointer;"
              title="Toggle SortBy"
            >
              PVM
              <div
                class="sortArrowWrapper"
              >
                <svg
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <rect
                      height="24"
                      width="24"
                    />
                    <polygon
                      fill="currentColor"
                      points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              Jono
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
            >
              Kotikunta
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 150px; width: 150px;"
            >
              Tila
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 300 0 auto; min-width: 300px; width: 300px;"
            >
              Venepaikka
            </div>
            <div
              class="headerCell expander"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 75 0 auto; min-width: 75px; width: 75px;"
            >
              <button>
                Pienennä kaikki
              </button>
            </div>
          </div>
        </div>
        <div
          role="rowgroup"
        >
          <div
            class="rowWrapper"
            role="row"
          >
            <div
              class="tableCell"
            >
              Ei tietoja
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pagination"
    >
      <button
        class="prevBtn disabled"
        disabled=""
      >
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <polygon
              fill="currentColor"
              points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
            />
          </g>
        </svg>
        <span
          class="text standard span"
        >
          Edellinen
        </span>
      </button>
      <div>
        <div
          class="selectContainer"
        >
          <select
            class="select"
          />
        </div>
        / 
        <button>
          <span
            class="text standard span underlined"
          >
            0
          </span>
        </button>
      </div>
      <button
        class="nextBtn"
      >
        <span
          class="text standard span"
        >
          Seuraava
        </span>
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <polygon
              fill="currentColor"
              points="10.5 5.5 12 7 8 11 20.5 11 20.5 13 8 13 12 17 10.5 18.5 4 12"
              transform="matrix(-1 0 0 1 24.5 0)"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
